--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "todolist",
+  "name": "cryptoverse",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.5",
+    "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
+    "antd": "^5.15.4",
+    "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
+    "html-react-parser": "^5.1.9",
     "json-server": "^0.17.3",
+    "millify": "^6.1.0",
+    "moment": "^2.30.1",
+    "monent": "^0.0.2-security",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.3.3"
   }
 }
